tests/lean/sec.lean.expected.out
sec.lean:7:11: error: invalid declaration, section/context already contains 'A'
