tests/lean/sec.lean
import data.prod
open prod

section
  variable A : Type
  variable a : A
  variable A : Type
  variable b : A

  definition foo := a
end
